--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jade": "0.28.1",
     "mongomate": "0.2.0",
     "mongodb": "~1.2.11",
-    "event": "~1.0.0"
+    "event": "~1.0.0",
+    "geocoder": "~0.1.0"
   },
   "engines": {
     "node": "0.6.x"
